Fixed example env

--- a/example.com.env
+++ b/example.com.env
@@ -1,5 +1,5 @@
 TLD = example.com
-CUSTOM_SUBDOMAIN = radio
+CUSTOM_SUBDOMAIN = false
 USE_HOSTNAME = true
 
 GODADDY_API_ENDPOINT = https://api.godaddy.com
